[package]
name = "payapp"
version = "0.1.0"
authors = ["Ian Goldberg <iang@uwaterloo.ca>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.100", features = ["derive"] }
curve25519-dalek = { package = "curve25519-dalek-ng", version = "3", default-features = false, features = ["serde", "std"] }
zkp = "0.8"
bincode = "1"
rand = "0.7.3"
num-bigint = { version = "0.3", features = ["rand", "serde"] }
rand_core = "0.5.1"
serde_json = "1.0"
ctr = "0.9.2"
lazy_static = "1"
hex_fmt = "0.3"
ring = "0.16.20"
aes = "0.8.3"
cmac = "0.7.1"
digest = "0.9"
hkdf = "0.12.3"
hmac = "0.10.1"
num = "0.4.0"
num-traits = "0.2.15"
sha-1 = "0.10.1"
sha2 = "0.9"
tink-core = "0.2.5"
tink-proto = "0.2.5"
tink-prf = "0.2.5"
hex ="0.4.3"
block-modes ="0.8.1"
hex-literal ="0.3.3"
dpf = "0.2.0"
crypto-mac = "0.10"
md-5 = "0.9"
rust-crypto = "^0.2"
getrandom = "0.2.10"
rustc-serialize = "0.3.24"

[dependencies.redis]
version = "*"

[features]
default = ["u64_backend"]
u32_backend = ["curve25519-dalek/u32_backend"]
u64_backend = ["curve25519-dalek/u64_backend"]
simd_backend = ["curve25519-dalek/simd_backend"]
